@@ -3,6 +3,7 @@ TGUI 0.8.5  (TBD)
 
 - Added RightClicked signal to ListView
 - Added functions to ListView to change existing items
+- EditBox::setInputValidator now returns false when regex was invalid
 - TitleBarHeight property of default renderer was ignored in ChildWindow
 
 
